<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/personal_information"
            android:icon="@drawable/ic_outline_account_circle"
            android:title="@string/personal_information" />

        <item
            android:id="@+id/mode_choice"
            android:icon="@drawable/ic_outline_pan_tool_alt"
            android:title="@string/mode" />

        <item
            android:id="@+id/device"
            android:enabled="false"
            android:icon="@drawable/ic_round_bluetooth_dark"
            android:title="@string/device" />

        <item
            android:id="@+id/appease"
            android:icon="@drawable/ic_outline_music_note_dark"
            android:enabled="false"
            android:title="@string/appease" />

        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_outline_language"
            android:title="@string/language" />

<!--        <item-->
<!--            android:id="@+id/feedback"-->
<!--            android:icon="@drawable/ic_outline_feedback"-->
<!--            android:title="@string/feedback" />-->

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_outline_info"
            android:title="@string/about" />

    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_round_logout"
            android:title="@string/logout" />
    </group>

</menu>