<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_dialog_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            style="@style/ToolbarStyleLight"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_round_close"
            app:title="@string/feedback"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/rating_experience"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/satisfy_content"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp" />

            <com.google.android.material.divider.MaterialDivider
                style="@style/Widget.MaterialComponents.MaterialDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/improve_content"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_speed"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/speed" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_ui"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/ui" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_video_conferencing"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/video_conferencing" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_bluetooth"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetooth_module" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_media_player"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/media_player" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_other"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/other" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_feedback"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="100dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:hint="@string/share_your_thought"
                    android:inputType="text"
                    android:lines="1"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@color/white">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/submit" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>