<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:layout_marginHorizontal="@dimen/_30sdp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/no_network"
        android:src="@drawable/ic_round_signal_wifi_off" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/oops"
        android:textColor="@color/blue"
        android:textSize="@dimen/_32sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/no_network"
        android:textColor="@color/blue"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_network_detail"
        android:textColor="@color/blue"
        android:textSize="@dimen/_16sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginBottom="20dp"
        android:text="@string/reconnect"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

</LinearLayout>