<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_dialog_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            style="@style/ToolbarStyleLight"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_round_close"
            app:title="@string/language"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/language_choice"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_category_round_background"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radio_btn_traditional"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/traditional_chinese"
                        android:textSize="@dimen/_12sdp" />

                    <RadioButton
                        android:id="@+id/radio_btn_simplified"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/simplified_chinese"
                        android:textSize="@dimen/_12sdp" />

                    <RadioButton
                        android:id="@+id/radio_btn_english"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/english_united_states"
                        android:textSize="@dimen/_12sdp" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>