<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tv_youtube_media_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_family_name"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_family_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_youtube_media_title"
        app:startIconDrawable="@drawable/ic_outline_house_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_family_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:hint="@string/family_name"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:lines="1"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_25sdp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_confirm"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_confirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/til_family_name" />


</androidx.constraintlayout.widget.ConstraintLayout>